<resources>
    <string name="app_name">TallerEnClase</string>
    <string name="EmpresaZXY">Empresa ZXY</string>
    <string name="Genero">Genero</string>
    <string name="TipoZapatilla">Tipo de zapatilla</string>
    <string name="Marca">Marca</string>
    <string name="Cantidad">Cantidad</string>
    <string name="ValorUnitario">Valor Unitario</string>
    <string name="Cotizar">Cotizar</string>
    <string name="Borrar">Borrar</string>
    <string name="ValorCantidad">Valor Cantidad</string>
    <string-array name="Generos">
        <item>@string/Masculino</item>
        <item>@string/Femenino</item>
    </string-array>
    <string-array name="TipoZapatillas">
        <item>@string/Zapatilla</item>
        <item>@string/Clasico</item>
    </string-array>
    <string-array name="Marcas">
        <item>@string/Nike</item>
        <item>@string/Adidas</item>
        <item>@string/Puma</item>
    </string-array>
    <string name="Masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="Zapatilla">Zapatilla</string>
    <string name="Clasico">Clasico</string>
    <string name="Nike">Nike</string>
    <string name="Adidas">Adidas</string>
    <string name="Puma">Puma</string>
    <string name="Error_uno">Debe llenar campo!</string>
    <string name="Error_dos">La cantidad debe ser mayor que 0</string>
</resources>
