<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tallerenclase.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/EmpresaZXY"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="195dp"
                android:layout_height="38dp"
                android:text="@string/Genero"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/CmbGenero"
                android:layout_width="match_parent"
                android:layout_height="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_weight="0.00"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="195dp"
                android:layout_height="38dp"
                android:text="@string/TipoZapatilla"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/CmbZapatilla"
                android:layout_width="match_parent"
                android:layout_height="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="195dp"
                android:layout_height="38dp"
                android:text="@string/Marca"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/CmbMarca"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TxtCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Cantidad"
                android:inputType="number"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnCotizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.36"
                android:onClick="Cotizar"
                android:text="@string/Cotizar" />

            <Button
                android:id="@+id/BtnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.36"
                android:onClick="Borrar"
                android:text="@string/Borrar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="0.46"
                android:text="@string/ValorUnitario"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ViewValorUnitario"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.42"
                android:text="@string/ValorCantidad"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ViewCantidad"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1.04"
                android:background="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
